# xlog

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build_for_linux.sh  build_for_mac.sh  build_for_win_vs2019-x64.bat
bench/: CMakeLists.txt  bench.cpp
cmake/: AddExt.cmake  AddLibrary.cmake  BaseMacroAndFunc.cmake  CompileOptions.cmake  DetectEnvironment.cmake  InstallFunc.cmake  xlogConfig.cmake  xlogConfig.cmake.in
src/: CMakeLists.txt  Common.h  Distribution.cpp  Distribution.h  FileSink.h  ISink.h  PatternFormatter.h  SPSCVarQueueOPT.h  StaticLogInfo.h  Str.h  TSCNS.h  argutil.h  fmtlog.cpp  fmtlog.h  fmtlogDetail.cpp  fmtlogDetail.h  logger.cpp  logger.h
src/common/: ExportMarco.h  SysInclude.h
src/fmt/: VERSION  core.h  format.h
test/: CMakeLists.txt  TestClass.cpp  test_cppinsights.cpp  test_enc_dec_test.cpp  test_multithread.cpp
test/bk/: test_enc_dec_test.cpp  test_log.cpp
